fixed alignment

--- a/hugo/themes/EPFL-Rocket-Team/static/stylesheet.css
+++ b/hugo/themes/EPFL-Rocket-Team/static/stylesheet.css
@@ -482,18 +482,18 @@ textarea {
 
 .div6 {
   grid-row-start: 9;
-  grid-column-start: 6;
+  grid-column-start: 7;
   grid-row-end: 11;
   grid-column-end: 13;
 }
 
 .div7 {
-  display: flex;
+  display: block;
   flex-wrap: wrap;
   grid-row-start: 1;
   grid-column-start: 1;
   grid-row-end: 7;
-  grid-column-end: 7;
+  grid-column-end: 6;
 }
 
 .parent-mission {
@@ -1030,7 +1030,7 @@ h6 span{
     grid-row-start: 1;
     grid-column-start: 1;
     grid-row-end: 4;
-    grid-column-end: 6;
+    grid-column-end: 7;
   }
 
   .parent-mission {
